--- a/1.css
+++ b/1.css
@@ -51,3 +51,18 @@ html,body{
  text-transform: uppercase;
  background: pink;
 }
+
+h1, h2, h3, h4, h5, p, ul, li {
+  margin: 0;
+  padding: 0;
+}
+h1 {
+  margin: 1rem 0;
+  font-size: 4rem;
+}
+.yellow {
+  color: rgba(#ffc600, 1);
+  font-weight: 500;
+}
+
+
