--- a/1.css
+++ b/1.css
@@ -10,6 +10,7 @@ html,body{
     list-style: none;
     background: white;
     border-bottom: 1px solid black;   
+    font-size: 25px;
 }
 .nav a{
     color: blue;
@@ -67,13 +68,18 @@ h1 {
 footer{
     background-color: darkslategray;
 }
-footer ul{
+footer h3{
+    font-weight: bold;
+    font-size: 21px;
+    color: white;
+}
+footer h3 ul{
     display: flex;
     list-style: none;
     flex-flow: column;
     font-weight: bold;
-    color: bisque;
-
+    font-size: 15px;
+    color: white;
 }
 
 
